--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ blockquote:before {
 	font-size: 30px;
 	font-weight: 700;
 	line-height: 34px;
-	text-align: left;
+	text-align: center;
 	margin:20px 0 35px;
 }
 .raja-ram {
